# Focusd

./: .gitignore  pyproject.toml
examples/: study-profile.yaml
hooks/: post_switch.sh  pre_switch.sh
profiles/: study.yml
src/focusd/: _init_.py  cli.py  manager.py  switcher.py
src/focusd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/focusd/profiles/: study.yaml
src/focusd/utils/: logger.py
