[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focusd"
version = "0.1.0"
description = "Linux-first productivity framework (CLI + system profiles + daemon)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]",
    "rich",
    "pyyaml"
]

[project.scripts]
focusd = "focusd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

